--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,66 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  font-family: "Merriweather", Georgia, serif;
+  font-size: 14px;
+  line-height: 1.5;
+  color: #333;
+}
+
+a {
+  color: #e51919;
+  text-decoration: none;
+  transition: color 0.2s ease;
+}
+
+a:hover,
+a:focus {
+  color: #ba0000;
+}
+
+p {
+  margin-bottom: 1.5em;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: 700;
+  margin-bottom: 0.5em;
+}
+
+h1 {
+  font-size: 2em;
+}
+
+h2 {
+  font-size: 1.75em;
+}
+
+h3 {
+  font-size: 1.5em;
+}
+
+h4 {
+  font-size: 1.25em;
+}
+
+h5 {
+  font-size: 1em;
+}
+
+h6 {
+  font-size: 0.875em;
+}
+
+blockquote {
+  border-left: 3px solid #e51919;
+  margin-left: 0;
+  padding-left: 1em;
+  font-style: italic;
+}
