--- a/src/app/page/home/home.component.html
+++ b/src/app/page/home/home.component.html
@@ -11,7 +11,7 @@
       "
       (click)="activeTab = 'summary'"
     >
-      <span class="material-symbols-outlined mr-1"> settings </span> Summary
+      <span class="material-symbols-outlined mr-1"> summarize </span> Summary
     </button>
     <button
       class="px-4 py-2 text-sm font-medium rounded-t-md transition-colors duration-150 flex items-center text-md"
@@ -22,7 +22,8 @@
       "
       (click)="activeTab = 'qa'"
     >
-      <span class="material-symbols-outlined mr-1"> settings </span> Q&A
+      <span class="material-symbols-outlined mr-2"> question_exchange </span>
+      Q&A
     </button>
     <button
       class="px-4 py-2 text-sm font-medium rounded-t-md transition-colors duration-150 flex items-center text-md"
