--- a/src/app/page/config/config.component.html
+++ b/src/app/page/config/config.component.html
@@ -1,19 +1,17 @@
 <div class="bg-gray-900 text-white p-6 rounded-lg">
   <form (ngSubmit)="onSubmit()">
     <!-- Provider Selection -->
-    <div class="mb-6">
-      <label for="provider" class="block text-sm font-medium mb-2"
-        >Provider</label
-      >
+    <div class="my-6">
+      <h2 class="text-lg font-semibold mb-4">Provider</h2>
       <select
         class="block w-full bg-gray-800 border border-gray-700 rounded-md py-2 pl-3 pr-10 text-sm appearance-none focus:outline-none focus:ring-2 focus:ring-blue-500"
         name="provider"
         [(ngModel)]="config.defaultProvider"
       >
-        @for(provider of availableOptions.provider; track provider) {
-        <option [value]="provider" class="bg-gray-700 text-white">
-          {{ provider }}
-        </option>
+        @for (provider of availableOptions.provider; track provider) {
+          <option [value]="provider" class="bg-gray-700 text-white">
+            {{ provider }}
+          </option>
         }
         <span
           class="material-symbols-outlined absolute right-3 top-2.5 h-5 w-5 text-gray-600 pointer-events-none"
@@ -23,47 +21,79 @@
       </select>
     </div>
 
-    @for (provider of availableOptions.provider; track provider) { @if
-    (config.defaultProvider === provider) {
-    <h2 class="text-lg font-semibold mb-4">
-      {{ provider.toUpperCase() }} Settings
-    </h2>
+    @for (provider of availableOptions.provider; track provider) {
+      @if (config.defaultProvider === provider) {
+        <h2 class="text-lg font-semibold mb-4">
+          {{ provider.toUpperCase() }} Settings
+        </h2>
 
-    <div class="space-y-4">
-      <div>
-        <label for="{{ provider }}-model" class="block text-sm font-medium mb-2"
-          >Model</label
-        >
-        <select
-          class="block w-full bg-gray-800 border border-gray-700 rounded-md py-2 pl-3 pr-10 text-sm appearance-none focus:outline-none focus:ring-2 focus:ring-blue-500"
-          name="{{ provider }}-model"
-          [(ngModel)]="config[provider].model"
-        >
-          @for(model of availableOptions[provider].model; track model) {
-          <option [value]="model" class="bg-gray-700 text-white">
-            {{ model }}
-          </option>
-          }
-          <span class="material-symbols-outlined"> arrow_drop_down </span>
-        </select>
-      </div>
+        <div class="space-y-4">
+          <div>
+            <label
+              for="{{ provider }}-model"
+              class="block text-sm font-medium mb-2"
+              >Model</label
+            >
+            <select
+              class="block w-full bg-gray-800 border border-gray-700 rounded-md py-2 pl-3 pr-10 text-sm appearance-none focus:outline-none focus:ring-2 focus:ring-blue-500"
+              name="{{ provider }}-model"
+              [(ngModel)]="config[provider].model"
+            >
+              @for (model of availableOptions[provider].model; track model) {
+                <option [value]="model" class="bg-gray-700 text-white">
+                  {{ model }}
+                </option>
+              }
+              <span class="material-symbols-outlined"> arrow_drop_down </span>
+            </select>
+          </div>
 
-      <div>
-        <label
-          for="{{ provider }}-api_key"
-          class="block text-sm font-medium mb-2"
-          >API Key</label
-        >
+          <div>
+            <label
+              for="{{ provider }}-api_key"
+              class="block text-sm font-medium mb-2"
+              >API Key</label
+            >
+            <input
+              name="{{ provider }}-api_key"
+              [(ngModel)]="config[provider].api_key"
+              class="block w-full bg-gray-800 border border-gray-700 rounded-md py-2 px-3 text-sm focus:outline-none focus:ring-2 focus:ring-blue-500"
+              placeholder="Enter {{ provider.toUpperCase() }} API Key"
+              type="password"
+            />
+          </div>
+        </div>
+      }
+    }
+
+    <div class="my-6">
+      <div class="flex">
         <input
-          name="{{ provider }}-api_key"
-          [(ngModel)]="config[provider].api_key"
-          class="block w-full bg-gray-800 border border-gray-700 rounded-md py-2 px-3 text-sm focus:outline-none focus:ring-2 focus:ring-blue-500"
-          placeholder="Enter {{ provider.toUpperCase() }} API Key"
-          type="password"
+          type="checkbox"
+          class="flex h-4 w-4 rounded text-blue-600 focus:ring-blue-500 border-gray-300"
+          [checked]="config.translate.enable"
+          (change)="config.translate.enable = !config.translate.enable"
         />
+        <h2 class="flex-grow text-lg font-semibold mb-4">Enable Translate</h2>
       </div>
+      <p>Try to translate summary to target language</p>
+      <select
+        class="block w-full bg-gray-800 border border-gray-700 rounded-md py-2 pl-3 pr-10 text-sm appearance-none focus:outline-none focus:ring-2 focus:ring-blue-500"
+        name="provider"
+        [(ngModel)]="config.translate.defaultLanguage"
+      >
+        @for (language of availableOptions.availableLanguages; track language) {
+          <option [value]="language" class="bg-gray-700 text-white">
+            {{ language }}
+          </option>
+        }
+        <span
+          class="material-symbols-outlined absolute right-3 top-2.5 h-5 w-5 text-gray-600 pointer-events-none"
+        >
+          arrow_drop_down
+        </span>
+      </select>
     </div>
-    } }
 
     <!-- Submit Button -->
     <button
