use routes instead of state

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
-<div class="relative p-4">
+<app-header
+  class="fixed top-0 left-0 right-0 flex items-center justify-between p-4 pb-0 bg-gray-100 z-50"
+></app-header>
+<div class="relative p-4 pt-20">
   <router-outlet></router-outlet>
 </div>
 <app-toast></app-toast>
